relax otel requirements, dont gitsplit tags (#93)
- relax composer requirements so that beta can be installed
- Symfony needs some attention to make it compatible with latest otel API/SDK > 0.0.15, so keep it at that version for now.
- dont gitsplit tags, we will do it manually for individual contrib modules post-split, since the contrib modules can be at vastly different stabilities
- fix up Dockerfile; the use of semi-colons meant that a docker build would happily continue past errors that weren't the last command in a step

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7.4 || ^8.0",
-    "open-telemetry/context": "^0"
+    "open-telemetry/context": "*"
   },
   "autoload": {
     "psr-4": {
